# pgweasel

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
.github/workflows/: rust.yml
cmd/: connections.go  errors.go  grep.go  locks.go  peaks.go  plans.go  root.go  slow.go  stats.go  system.go
internal/detector/: detector.go
internal/logparser/: csvparser.go  logparser.go  logparser_test.go
internal/pgdetector/: detect.go
internal/pglog/: fifo.go  pglog.go  pglog_test.go  slow_agg.go  slow_agg_test.go  topn.go  topn_test.go
internal/postgres/: postgres.go
internal/util/: util.go  util_test.go
src/: cli.rs  convert_args.rs  duration.rs  error.rs  errors.rs  files.rs  format.rs  logparser.rs  logreader.rs  main.rs  output_results.rs  postgres.rs  print_logs.rs  severity.rs  util.rs
src/aggregators/: connections.rs  error_frequency.rs  error_histogram.rs  mod.rs  slow_query.rs  top_slow_query.rs  zero.rs
src/errors/: date_serializer.rs  log_record.rs  mod.rs  process.rs  severities.rs  severity.rs
src/errors/csv_reader/: date_serializer.rs  log_record.rs  mod.rs  process.rs
src/filters/: filter_contains.rs  filter_contains_ci.rs  filter_slow.rs  filter_starts_with.rs  locking_filter.rs  mod.rs  system_filter.rs
src/format/: csv.rs  mod.rs  plain.rs
src/output_results/: mod.rs
src/parsers/: csv_log_parser.rs  date_serializer.rs  log_log_parser.rs  mod.rs
src/parsers/csv_log_parser/: log_record.rs  mod.rs
tests/: connections.rs  errors.rs  grep.rs  help.rs  locks.rs  slow.rs  system.rs
(+1 files in other folders)
