[package]
name = "pgweasel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
once_cell = "1.21.3"
log = "0.4.29"
env_logger = "0.11"
flate2 = "1.1.5"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
zip = "6.0.0"
derive_more = { version = "2.1.0", features = ["from"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
